--- a/src/MeetingRooms.Application/Resources/ApplicationMessage.resx
+++ b/src/MeetingRooms.Application/Resources/ApplicationMessage.resx
@@ -141,4 +141,7 @@
   <data name="User.NotFound" xml:space="preserve">
     <value>Usuário não encontrado</value>
   </data>
+  <data name="User.Validate.Fail" xml:space="preserve">
+    <value>Email ou senha incorretos</value>
+  </data>
 </root>
